--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,10 @@ edition = "2021"
 clap = { version = "4.4.2", features = ["derive"] }
 colored = "2"
 
+[[bin]]
+name = "machine"
+path = "src/main.rs"
+
+[[bin]]
+name = "c64"
+path = "src/main-c64.rs"
