--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ clap = { version = "4.4.2", features = ["derive"] }
 colored = "2"
 cursive = "0.20"
 substring = "1.4.5"
+tokio = { version = "1.32.0", features = ["time"] }
 
 [[bin]]
 name = "machine"
