--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4.2", features = ["derive"] }
 colored = "2"
-cursive = "0.20"
+cursive = { version="0.20", default-features=false, features=["termion-backend"] }
 substring = "1.4.5"
 tokio = { version = "1.32.0", features = ["time"] }
 
