--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ edition = "2021"
 clap = { version = "4.4.2", features = ["derive"] }
 colored = "2"
 cursive = { version="0.20", default-features=false, features=["ncurses-backend"] }
-cursive_hexview = "0.7"
+cursive_hexview = { path="../../github/cursive_hexview" }
+# cursive_hexview = "0.7"
 substring = "1.4.5"
 log = "0.4.20"
 env_logger = "0.10.0"
