--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,11 @@ edition = "2021"
 clap = { version = "4.4.2", features = ["derive"] }
 colored = "2"
 cursive = { version="0.20", default-features=false, features=["termion-backend"] }
+cursive_hexview = { git="https://github.com/ddrcode/cursive_hexview.git", branch="start-addr" }
+# cursive_hexview = "0.7"
 substring = "1.4.5"
+log = "0.4.20"
+env_logger = "0.10.0"
 
 [[bin]]
 name = "machine"
