--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["crates/mos6502", "crates/c64", "crates/gui"]
+members = ["crates/machine", "crates/c64", "crates/gui"]
 resolver = "2"
