--- a/crates/c64/Cargo.toml
+++ b/crates/c64/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-machine = { path="../mos6502/" }
+machine = { path="../machine/" }
 clap = { version = "4.4.2", features = ["derive"] }
 colored = "2"
 substring = "1.4.5"
