--- a/crates/gui/Cargo.toml
+++ b/crates/gui/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-machine = { path="../mos6502/" }
+machine = { path="../machine/" }
 c64 = { path="../c64/" }
 clap = { version = "4.4.2", features = ["derive"] }
 colored = "2"
