--- a/crates/machine/Cargo.toml
+++ b/crates/machine/Cargo.toml
@@ -13,6 +13,7 @@ clap = { version = "4.4.2", features = ["derive"] }
 colored = "2"
 substring = "1.4.5"
 env_logger = "0.10.0"
+keyboard-types = { version="0.7", features=["webdriver"] }
 
 [[bin]]
 name = "machine"
