--- a/crates/c64/Cargo.toml
+++ b/crates/c64/Cargo.toml
@@ -6,11 +6,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-machine = { path="../mos6502/" }
+machine = { path="../machine/" }
 clap = { version = "4.4.2", features = ["derive"] }
 colored = "2"
 substring = "1.4.5"
 env_logger = "0.10.0"
+keyboard-types = { version="0.7", features=["webdriver"] }
 
 [lib]
 name = "c64"
