--- a/crates/gui/Cargo.toml
+++ b/crates/gui/Cargo.toml
@@ -8,16 +8,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-machine = { path="../mos6502/" }
+machine = { path="../machine/" }
 c64 = { path="../c64/" }
 clap = { version = "4.4.2", features = ["derive"] }
 colored = "2"
 cursive = { version="0.20", default-features=false, features=["termion-backend"] }
-cursive_hexview = { git="https://github.com/ddrcode/cursive_hexview.git", branch="start-addr" }
+cursive_hexview = { git="https://github.com/hellow554/cursive_hexview.git" }
 # cursive_hexview = "0.7"
 substring = "1.4.5"
 log = "0.4.20"
 env_logger = "0.10.0"
+debounce = "0.2.2"
 
 [[bin]]
 name = "gui"
