--- a/crates/gui/Cargo.toml
+++ b/crates/gui/Cargo.toml
@@ -12,14 +12,13 @@ machine = { path="../machine/" }
 c64 = { path="../c64/" }
 clap = { version = "4.4.2", features = ["derive"] }
 colored = "2"
-cursive = { version="0.20", default-features=false, features=["termion-backend"] }
-cursive_hexview = { git="https://github.com/hellow554/cursive_hexview.git" }
+# cursive = { version="0.20", default-features=false, features=["termion-backend"] }
+# cursive_hexview = { git="https://github.com/hellow554/cursive_hexview.git" }
+cursive_hexview = { path="../../../../github/cursive_hexview/" }
+cursive = { git="https://github.com/gyscos/cursive.git", default-features=false, features=["termion-backend"] }
 # cursive_hexview = "0.7"
 substring = "1.4.5"
 log = "0.4.20"
-env_logger = "0.10.0"
-debounce = "0.2.2"
-lazy_static = "1.4.0"
 
 [[bin]]
 name = "gui"
