--- a/crates/gui/Cargo.toml
+++ b/crates/gui/Cargo.toml
@@ -5,20 +5,18 @@ description = "DDR's Commodore 64 emulator"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 machine = { path="../machine/" }
 c64 = { path="../c64/" }
 clap = { version = "4.4.2", features = ["derive"] }
 colored = "2"
-# cursive = { version="0.20", default-features=false, features=["termion-backend"] }
-# cursive_hexview = { git="https://github.com/hellow554/cursive_hexview.git" }
-cursive_hexview = { path="../../../../github/cursive_hexview/" }
-cursive = { git="https://github.com/gyscos/cursive.git", default-features=false, features=["termion-backend"] }
+cursive = { version="0.20", default-features=false, features=["termion-backend"] }
+cursive_hexview = { git="https://github.com/hellow554/cursive_hexview.git" }
 # cursive_hexview = "0.7"
 substring = "1.4.5"
 log = "0.4.20"
+keyboard-types = { version="0.7", features=["webdriver"] }
 
 [[bin]]
 name = "gui"
