--- a/crates/c64/Cargo.toml
+++ b/crates/c64/Cargo.toml
@@ -9,10 +9,10 @@ edition = "2021"
 machine = { path="../machine/" }
 clap = { version = "4.4.2", features = ["derive"] }
 colored = "2"
-substring = "1.4.5"
 env_logger = "0.10.0"
 keyboard-types = { version="0.7", features=["webdriver"] }
 log = "0.4.20"
+lazy_static = "1.4.0"
 
 [lib]
 name = "c64"
