--- a/crates/machine/Cargo.toml
+++ b/crates/machine/Cargo.toml
@@ -20,6 +20,7 @@ serde_derive = "1.0.188"
 serde = "1.0.188"
 thiserror = "1.0.49"
 anyhow = "1.0.75"
+crossbeam-channel = "0.5.8"
 
 [[bin]]
 name = "machine"
