Breakpoints, variables and profiles (#25)
* cleaned up cli start and app error

* code cleanup

* cli and profiles

* some experimentation with observer

* variables view (vip)

* debugger profile file

* gui config

* creating machine from profile

* breakpoints view

* Create LICENSE

* reset procedure

* channel added for gui-client communication

* final touches in debug view

* readme

--- a/crates/machine/Cargo.toml
+++ b/crates/machine/Cargo.toml
@@ -18,6 +18,9 @@ log = "0.4.20"
 toml = "0.8.0"
 serde_derive = "1.0.188"
 serde = "1.0.188"
+thiserror = "1.0.49"
+anyhow = "1.0.75"
+crossbeam-channel = "0.5.8"
 
 [[bin]]
 name = "machine"
