--- a/crates/c64/Cargo.toml
+++ b/crates/c64/Cargo.toml
@@ -13,6 +13,8 @@ env_logger = "0.10.0"
 keyboard-types = { version="0.7", features=["webdriver"] }
 log = "0.4.20"
 lazy_static = "1.4.0"
+anyhow = "1.0.75"
+crossbeam-channel = "0.5.8"
 
 [lib]
 name = "c64"
