--- a/crates/machine/Cargo.toml
+++ b/crates/machine/Cargo.toml
@@ -21,6 +21,7 @@ serde = "1.0.188"
 thiserror = "1.0.49"
 anyhow = "1.0.75"
 crossbeam-channel = "0.5.8"
+lazy_static = "1.4.0"
 
 [[bin]]
 name = "machine"
