--- a/crates/c64/Cargo.toml
+++ b/crates/c64/Cargo.toml
@@ -15,6 +15,8 @@ log = "0.4.20"
 lazy_static = "1.4.0"
 anyhow = "1.0.75"
 crossbeam-channel = "0.5.8"
+chrono = "0.4.31"
+bcd-numbers = "1.0.11"
 
 [lib]
 name = "c64"
