--- a/crates/machine/Cargo.toml
+++ b/crates/machine/Cargo.toml
@@ -24,6 +24,7 @@ crossbeam-channel = "0.5.8"
 lazy_static = "1.4.0"
 chrono = "0.4.31"
 bcd-numbers = "1.0.11"
+num = "0.4.1"
 
 [[bin]]
 name = "machine"
