--- a/crates/machine/Cargo.toml
+++ b/crates/machine/Cargo.toml
@@ -26,6 +26,7 @@ chrono = "0.4.31"
 bcd-numbers = "1.0.11"
 num = "0.4.1"
 gametime = "0.1.6"
+genawaiter = { version="0.99.1", default-features=false }
 
 [[bin]]
 name = "machine"
