--- a/crates/hardware/Cargo.toml
+++ b/crates/hardware/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
 rppal = "0.15.0"
 
 [[bin]]
